2010-08-27  Joseph Pecoraro  <joepeck@webkit.org>

Reviewed by Alexey Proskuryakov.

LayoutTests:

    2010-08-27  Joseph Pecoraro  <joepeck@webkit.org>

            Extra Events triggered by <input> on focus
            https://bugs.webkit.org/show_bug.cgi?id=44731

            * fast/events/input-focus-no-duplicate-events-expected.txt: Added.
            * fast/events/input-focus-no-duplicate-events.html: Added.
            * fast/events/input-tab-focus-no-duplicate-events-expected.txt: Added.
            * fast/events/input-tab-focus-no-duplicate-events.html: Added.

WebCore:

    2010-08-27  Joseph Pecoraro  <joepeck@webkit.org>

            Extra Events triggered by <input> on focus
            https://bugs.webkit.org/show_bug.cgi?id=44731

            Tests: fast/events/input-focus-no-duplicate-events.html
                   fast/events/input-tab-focus-no-duplicate-events.html

            * dom/Element.cpp:
            (WebCore::Element::focus): do not continue and update the appearance of the element if it was not focused.
            * page/FocusController.cpp:
            (WebCore::FocusController::setFocusedNode): respect the return value of Document::setFocusedNode.

Canonical link: https://commits.webkit.org/57051@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66284 268f45cc-cd09-0410-ab3c-d52691b4dbfc